@@ -55,3 +55,13 @@ li{
     border: 1px solid #000000;
     background: #ffffff url("../../images/admin/top_bg.png") repeat-x;
 }
+
+.admin_login{
+    width: 300px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+.admin_login form{
+    margin-top: 20px;
+}
