@@ -3,7 +3,6 @@ $admin = dirname(dirname(__FILE__));
 $frontend = dirname($admin);
 Yii::setPathOfAlias('admin', $admin);
 Yii::setPathOfAlias('frontend', $frontend);
-
 return array(
 		'basePath' => $frontend,
         'name' => '大学窝',
@@ -11,18 +10,17 @@ return array(
 		'viewPath' => $admin.'/views',
 		'runtimePath' => $admin.'/runtime',
         'language'=>'zh_cn',
-		
-		'defaultController'=>'admin',
-		
+		'defaultController'=>'adminLogin',
 		'components'=>array(
-				
+            'user'=>array(
+                'loginUrl' => array('adminLogin/')
+            ),
 				'db'=>array(
 						'connectionString' => 'mysql:host=localhost;dbname=shops',
 						'emulatePrepare'   => true,
 						'username'          => 'root',
 						'password'          => 'lovelp',
 						'charset'           => 'utf8',
-		
 				),
 				'urlManager'=>array(
 /*						'urlFormat'=>'path',
@@ -32,11 +30,11 @@ return array(
 						)*/
 				),
 		),
-		
 		'import' => array(
 				'admin.models.*',
 				'frontend.models.*',
 				'frontend.common.classes.*',
+                'frontend.components.*'
 		),
 		
 );
