@@ -1,6 +1,6 @@
 <?php
 
-class AdminController extends BaseController {
+class AdminController extends AdminBaseController {
 
     public $layout="//layouts/frame";
 
@@ -8,39 +8,30 @@ class AdminController extends BaseController {
      * the frame of admin
      */
 	public function actionIndex() {
-        $this->pageTitle = Yii::app()->name . ' | admin';
-
-		$this->render('index' , array(
-
-        ) );
+        $this->pageTitle = Yii::app()->name . ' - admin';
+		$this->render('index' , array() );
 	}
 
     /**
      * the left navigation of admin frame
      */
     public function actionHead() {
-        $this->pageTitle = Yii::app()->name . ' | admin';
-
-        $this->render('head' , array(
-
-        ));
+        $this->pageTitle = Yii::app()->name . ' - admin';
+        $this->render('head' , array());
     }
 
     /**
      * the left navigation of admin frame
      */
     public function actionLeft() {
-        $this->pageTitle = Yii::app()->name . ' | admin';
-
-        $this->render('left' , array(
-
-        ));
+        $this->pageTitle = Yii::app()->name . ' - admin';
+        $this->render('left' , array());
     }
 
     /**
      * the home page of admin
      */
 	public function actionHome() {
-        $this->pageTitle = Yii::app()->name . ' | admin';
+        $this->pageTitle = Yii::app()->name . ' - admin';
     }
 }
