@@ -7,3 +7,13 @@
 alter table `user` drop column show_owner;
 alter table `shops` alter column is_active set default '0';
 
+##20120924##
+##yaoxianjin##
+##添加管理员表##
+CREATE TABLE IF NOT EXISTS `admin` (
+  `id` int(2) unsigned NOT NULL AUTO_INCREMENT,
+  `username` varchar(100) NOT NULL,
+  `password` varchar(40) NOT NULL,
+  PRIMARY KEY (`id`)
+) ENGINE=InnoDB DEFAULT CHARSET=utf8 AUTO_INCREMENT=1 ;
+
